# shard

./: .claudeignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONCEPT.txt  Cargo.toml  DEVELOPMENT.md  DOCKER_README.md  Dockerfile  Dockerfile.app  Dockerfile.integration  README.md  SHARDS.md  SPEC.md  TODOS.md  VISION.md  build.sh  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  install.ps1  install.sh  ipc_linux.odin  ipc_stub.odin  justfile  mcp.sh  opencode.json  project.md  roadmap.md  server.py  shard.agent.md  shard.odin  shard_selftest.odin  shard_unit_test.odin  test_llm.sh  todo.md  tui
.agent/: instructions.md  mcp.json  setup.md
.claude/: settings.json
app/: effect.glsl  index.html  package-lock.json  package.json  serve.js  specs.md  vite.config.js
benches/: navigation_bench.rs  rendering_bench.rs
docker/: Dockerfile  docker-compose.yml  justfile
docs/: CONCEPT.txt  TESTS.md  VISION.md  roadmap.md  todo.md  vision.md
help/: daemon.ai.txt  help.ai.txt  help.txt  info.txt  tools.json  version.txt
scripts/: Dockerfile.integration  cache-read  cache-touch  index_knowledge.sh  mcp  mcp_server.sh  read_context.sh  stress_test.sh  test.sh  test_integration.sh  update_context.sh  wiki-ingest-random.js  wiki-ingest.js  wiki-mass-ingest.js
src/: args.odin  blob.odin  blob_test.odin  block.odin  cache.odin  cmd_connect.odin  cmd_dump.odin  cmd_init.odin  cmd_new.odin  cmd_vault.odin  concurrent_test.odin  config.odin  congestion.odin  consumption_test.odin  context.odin  crypto.odin  daemon.odin  default.config  defaults.jsonc  (+59 more)
(+149 files in other folders)
